# arithmetic-interpreter

./: Cargo.toml  README.md
src/: input.rs  main.rs  parser.rs  runtime.rs  tokenizer.rs
