[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We need this to recognize identifers.
# This is only useful to implement special commands.
unicode-xid = "0.2.4"

# Colorize command-line output.
owo-colors = "3.5.0"
